<resources>
    <string name="app_name">Nimble Survey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_button">Forgot?</string>
    <string name="login_button">Log in</string>
    <string name="reset_button">Reset</string>
    <string name="reset_password_description">Enter your email to receive instructions for resetting your password.</string>
    <string name="logout_button">Logout</string>
    <string name="today">Today</string>
    <string name="start_survey_button">Start Survey</string>
    <string name="submit_button">Submit</string>
    <string name="warning">Warning!</string>
    <string name="warning_text">Are you sure you want to quit the survey?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="nps_not_likely">Not at all Likely</string>
    <string name="nps_likely">Extremy Likely</string>
    <string name="invalid_single_form">You must select one option to continue</string>
    <string name="invalid_multiple_form">You must select at least one option to continue</string>
    <string name="invalid_input_form">You must fill the fields to continue</string>
</resources>