<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResetPasswordFragment">

    <include layout="@layout/unlogged_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/neuzeit_s_lt_std_book"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/reset_password_description" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/resetPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/white30"
                android:textColor="@color/white"
                android:fontFamily="@font/neuzeit_s_lt_std_book"
                android:textSize="17sp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_style1"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/reset_button"
                android:textColor="@color/gray"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:fontFamily="@font/neuzeit_s_lt_std_book"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>