<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <include layout="@layout/unlogged_background" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/back"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginContainer">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/white30"
                android:textColor="@color/white"
                android:fontFamily="@font/neuzeit_s_lt_std_book"
                android:textSize="17sp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_style1"
                tools:ignore="Autofill" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style1">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/white30"
                    android:textColor="@color/white"
                    android:fontFamily="@font/neuzeit_s_lt_std_book"
                    android:textSize="17sp"
                    android:inputType="textPassword"
                    android:background="@color/transparent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/forgotButton"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/forgotButton"
                    android:layout_width="87dp"
                    android:layout_height="match_parent"
                    android:text="@string/forgot_button"
                    android:paddingHorizontal="0dp"
                    android:fontFamily="@font/neuzeit_s_lt_std_book"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cornerRadius="0dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/login_button"
                android:textColor="@color/gray"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:fontFamily="@font/neuzeit_s_lt_std_book"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>